--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,12 @@
     <meta name="twitter:title" content="Ashval Writer's Suite - ชุดเครื่องมือนักเขียน AI">
     <meta name="twitter:description" content="AI-powered writing, planning, and worldbuilding tools.">
     <meta name="twitter:image" content="/og-image.png">
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico">
-    <!-- PWA Manifest -->
+    <!-- Favicon & Mobile Icons -->
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="manifest" href="/site.webmanifest">
     <link rel="manifest" href="/manifest.json">
     <!-- Preconnect Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
